<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:id="@+id/major_layout"
    tools:context=".WordActivity">

    <RelativeLayout
        android:id="@+id/top_camera_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="14dp"
            android:src="@drawable/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/camera_activity"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollview_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="35dp">

                <ImageView
                    android:id="@+id/set_profile_image"
                    android:layout_width="290dp"
                    android:layout_height="290dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:contentDescription="."
                    android:src="@drawable/ic_launcher_background" />
                <!--        android:src="@drawable/ic_image_black_24dp" />-->

                <!--Here we are clicking on this text to select
                    an image from camera or gallery-->


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="320dp"
                    android:layout_height="320dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:scaleY="2"
                    app:lottie_autoPlay="false"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/first" />

                <!--                android:layout_marginTop="40dp"-->

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/secondView"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_alignBottom="@+id/animationView"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:scaleX="1.3"
                    android:scaleY="1.1"
                    app:lottie_autoPlay="false"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/another" />
                <!--                android:layout_marginBottom="-20dp"-->
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/server_url_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_url_desc"
                    android:textColor="#29A9ED"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/server_url"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="4"
                    android:inputType="textUri"
                    android:keepScreenOn="false"
                    android:singleLine="false"
                    android:text="@string/server_url"
                    android:textColor="#29A9ED"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/processBtnCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/orange_button"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/process_image"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/responseText"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_marginTop="10dp"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>